--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Kamoliddin -->
+    <header class="header"></header>
+
+
+    <!-- Mihail -->
+    <main>
+        <section class="hero"></section>
+    </main>
     
 </body>
 </html>
