--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
 </head>
 <body>
     <!-- Kamoliddin -->
-    <header class="header"></header>
+    <header class="header">
+        <div class="container header__container">
+            <a class="header__logo-silka" href="index.html">
+                <img class="header__logo" src="" alt="">
+            </a>
+
+            <nav>
+                <ul class="header__list">
+                    <li class="header__item"><a href="" class="header__silka"></a></li>
+                    <li class="header__item"><a href="" class="header__silka"></a></li>
+                    <li class="header__item"><a href="" class="header__silka"></a></li>
+                    <li class="header__item"><a href="" class="header__silka"></a></li>
+                    <li class="header__item"><a href="" class="header__silka"></a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
 
     <!-- Mihail -->
