--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
                 </ul>
             </nav>
         </div>
+
+        <div>
+            <p></p>
+            <h3></h3>
+            <a href=""></a>
+        </div>
     </header>
 
 
