--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
 
     <!-- Mihail -->
     <main>
-        <section class="hero"></section>
+        <section class="hero">
+            <div>helo</div>
+            <a href=""></a>
+            <p></p>
+            <ul>
+                <li><img src="" alt=""></li>
+            </ul>
+
+            <hr>
+        </section>
     </main>
     
 </body>
